--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,27 +1,25 @@
-/* Header.css */
 .header {
     background: white;
     color: #333;
     padding: 10px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between; /* 좌우 여백을 최대로 확보 */
+    justify-content: space-between;
     align-items: center;
 }
+
+
 
 nav ul {
     list-style-type: none;
     padding: 0;
     display: flex;
-    gap: 20px; /* 리스트 항목 사이의 간격을 조정 */
+    gap: 20px;
 }
 
 nav li {
     cursor: pointer;
-}
-nav li {
-    margin-right: 20px; /* 각 리스트 항목 사이의 간격을 조정 */
-    cursor: pointer;
+    margin-right: 20px;
 }
 
 .search-bar input {
@@ -39,7 +37,5 @@ nav li {
 }
 
 .user-options a {
-    margin-right: 20px; /* 로그인 및 회원가입 링크 사이의 간격을 조정 */
+    margin-right: 20px;
 }
-
-/* 다른 Header 스타일 추가 */
