--- a/src/pages/PostForm.css
+++ b/src/pages/PostForm.css
@@ -28,7 +28,7 @@
   margin-top: 20px;
   padding: 10px 20px;
   font-size: 1.2em;
-  background-color: #4CAF50; /* Green */
+  background-color: #9EE5E9;
   border: none;
   color: white;
   cursor: pointer;
@@ -37,5 +37,5 @@
 }
 
 .post-form button:hover {
-  background-color: #45a049;
+  background-color: #9EE5E9;
 }
