--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,11 +1,10 @@
-/* Header.css */
 .header {
     background: white;
     color: #333;
     padding: 10px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between; /* 좌우 여백을 최대로 확보 */
+    justify-content: center; 
     align-items: center;
 }
 
@@ -13,14 +12,14 @@ nav ul {
     list-style-type: none;
     padding: 0;
     display: flex;
-    gap: 20px; /* 리스트 항목 사이의 간격을 조정 */
+    gap: 20px; 
 }
 
 nav li {
     cursor: pointer;
 }
 nav li {
-    margin-right: 20px; /* 각 리스트 항목 사이의 간격을 조정 */
+    margin-right: 20px; 
     cursor: pointer;
 }
 
@@ -39,7 +38,5 @@ nav li {
 }
 
 .user-options a {
-    margin-right: 20px; /* 로그인 및 회원가입 링크 사이의 간격을 조정 */
+    margin-right: 20px; 
 }
-
-/* 다른 Header 스타일 추가 */
