--- a/src/pages/PostForm.css
+++ b/src/pages/PostForm.css
@@ -30,10 +30,8 @@
   font-size: 1.2em;
   background-color: #9EE5E9;
   border: none;
-  color: rgb(255, 255, 255);
+  color: white;
   cursor: pointer;
   border-radius: 4px;
   transition: background-color 0.3s ease;
-
 }
-
