--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -13,12 +13,8 @@
 .login-header {
     font-size: 2rem;
     font-weight: bold;
-    columns: #9EE5E9;
+    color: black;
     margin: 10px 0;
-}
-
-.login-header h1{
-    color: #9EE5E9;
 }
 
 .input-container {
